--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "solarassist-website",
+  "name": "solarassists-website",
   "version": "1.0.0",
-  "description": "Professional solar consultation and maintenance services website",
+  "description": "Solar Assists Company Website",
   "type": "module",
   "scripts": {
-    "dev": "python3 -m http.server 8000",
-    "build": "echo 'No build process needed for static site'"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint js/",
+    "format": "prettier --write .",
+    "validate": "npm run lint",
+    "test": "echo \"No tests yet\" && exit 0"
   },
-  "keywords": [
-    "solar",
-    "consultation",
-    "maintenance",
-    "AMC",
-    "renewable-energy"
-  ],
-  "author": "Solar Assist",
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5",
+    "vite": "^5.2.0",
+    "husky": "^9.0.11"
+  },
+  "keywords": ["solar", "energy", "website"],
+  "author": "solarassist25",
   "license": "MIT"
 }
